oxiplate-derive/tests/broken/strings/escaped-rust-string.stderr
error[E0609]: no field `foo` on type `&Data`
 --> tests/broken/strings/escaped-rust-string.rs:4:25
  |
4 | #[oxiplate_inline("\"{{ foo }}\"")]
  |                         ^^^ unknown field
